Change Pom Artifact

--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>DUOS</groupId>
-  <artifactId>TestingFramework</artifactId>
+  <artifactId>Test</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>TestingFramework</name>
+  <name>Test</name>
   <url>http://maven.apache.org</url>
 
   <properties>
