--- a/configs/Configurations.properties
+++ b/configs/Configurations.properties
@@ -4,7 +4,7 @@ windowMaximize=true
 driverPath=configs/chromedriver
 implicitlyWait = 10
 urlLocal = http://localhost:3000
-urlDev = https://duos.dsde-dev.broadinstitute.org
+urlDev = http://35.193.66.13.xip.io/
 userNameAdmin = waltester01@gmail.com
 passwordAdmin = Password01!
 reportConfigPath = configs/extent-config.xml
