--- a/configs/Configurations.properties
+++ b/configs/Configurations.properties
@@ -1,5 +1,5 @@
 environment=local
-browser=CHROME
+browser=CHROME_HEADLESS
 windowMaximize=true
 driverPath=configs/chromedriver
 implicitlyWait = 10
@@ -8,9 +8,3 @@ urlDev = http://35.193.66.13.xip.io/
 userNameAdmin = waltester01@gmail.com
 passwordAdmin = Password01!
 reportConfigPath = configs/extent-config.xml
-dbUrl = jdbc:mysql://localhost:3306/consent
-dbUser = root
-dbPass = root
-mongoDbUrl = localhost
-mongoDbUser = root
-mongoDbPass = root
