--- a/configs/Configurations.properties
+++ b/configs/Configurations.properties
@@ -1,7 +1,7 @@
 environment=local
 browser=CHROME_HEADLESS
 windowMaximize=true
-driverPath=configs/chromedriver
+driverPath=chromedriver
 implicitlyWait = 10
 urlLocal = http://localhost:3000
 urlDev = http://35.193.66.13.xip.io/
